# MyStuff

./: .gitignore  CMakeLists.txt
CS1605-Project2/: CMakeLists.txt  README.md
CS1605-Project2/source/: Defines.h  EnemyPlayer1.cpp  EnemyPlayer1.h  EnemyPlayer2.cpp  EnemyPlayer2.h  Intention.cpp  Intention.h  Pet.cpp  Pet.h  Player.cpp  Player.h  Session.cpp  Session.h  Skill.cpp  Skill.h  SkillCollection.cpp  SkillCollection.h  UserPlayer.cpp  UserPlayer.h  main.cpp  utilities.cpp  utilities.h
