set(CMAKE_CXX_STANDARD 17)

project(Project2)
add_executable(Project2
        source/main.cpp
        source/utilities.cpp
        source/utilities.h
        source/Session.cpp
        source/Session.h source/Player.cpp source/Player.h source/Pet.cpp source/Pet.h source/Skill.cpp source/Skill.h source/Intention.cpp source/Intention.h source/Defines.h source/UserPlayer.cpp source/UserPlayer.h source/EnemyPlayer1.cpp source/EnemyPlayer1.h source/SkillCollection.cpp source/SkillCollection.h source/EnemyPlayer2.cpp source/EnemyPlayer2.h)
